--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,10 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+    <app-root></app-root>
     <div class="navbar">
-        <a href="#home">Home</a>
-        <a href="#news">News</a>
+        <a href="Home">Home</a>
+        <a href="About">About</a>
         <div class="dropdown">
           <button class="dropbtn">Dropdown 
             <i class="fa fa-caret-down"></i>
@@ -23,6 +24,5 @@
           </div>
         </div> 
       </div>
-  <app-root></app-root>
 </body>
 </html>
