--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,14 @@
 <body>
     <app-root></app-root>
     <div class="navbar">
-        <a href="Home">Home</a>
-        <a href="About">About</a>
+      <nav>
+          <a href="home" routerLink="/home" routerLinkActive="active">Home</a>
+        <a href="about" routerLink="/about" routerLinkActive="active">About</a>
+        <a href="contact" routerLink="/contact" routerLinkActive="active">Contact</a>
+      </nav>
+      <div [@routeAnimation]="getAnimationData(routerOutlet)">
+        <router-outlet #routerOutlet="outlet"></router-outlet>
+      </div>
         <div class="dropdown">
           <button class="dropbtn">Dropdown 
             <i class="fa fa-caret-down"></i>
